# ucp

./: .cspell.json  .gitignore  .linkignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  build_local.sh  generate_schemas.py  hooks.py  index.html  index.md  llms-full.txt  llms.txt  main.py  mkdocs-spec.yml  mkdocs.yml  package-lock.json  package.json  playground.html  pyproject.toml  requirements-docs.txt  schema_utils.py  sitemap.xml  specification  versions.json
.cspell/: custom-words.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: enhancement-proposal.md
.github/workflows/: docs.yml  linter.yaml
2026-01-11/: 404.html  CNAME  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
2026-01-11/documentation/: core-concepts.html  roadmap.html  schema-authoring.html  ucp-and-ap2.html
2026-01-11/javascripts/: move_version_selector.js
2026-01-23/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
docs/: index.md  playground.md  versioning.md
draft/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
local_preview/: 404.html  index.html  versions.json
playground/: index.html  index.md
schemas/: capability.json  payment_handler.json
scripts/: build_local.sh  check_links.py  ci_check_models.sh  validate_json_examples.py
search/: search_index.json
specification/: index.html
stylesheets/: custom.css
test_site/: 404.html  CNAME  index.html  llms-full.txt  llms.txt  sitemap.xml
versioning/: index.html  index.md
(+734 files in other folders)
