[project]
name = "ucp"
version = "2026.01.23"
description = "Universal Commerce Protocol"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 80
indent-width = 2

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.50.0",
    "mike==2.1.3",
    "jsonschema>=4.19.0",
    "mkdocs-llmstxt==0.5.0",
    "mkdocs-macros-plugin==1.4.0",
    "mkdocs-material[imaging]>=9.0.0",
    "mkdocs-redirects==1.2.2",
    "mkdocs-site-urls==0.3.1",
    "pyyaml>=6.0.3",
    "yamllint==1.35.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
preview = false

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "SIM", "N", "UP", "D", "PTH", "T20"]
ignore = ["D203", "D213", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
case-sensitive = true
